Fixed alignment issues

--- a/src/map/MapView.scss
+++ b/src/map/MapView.scss
@@ -2,24 +2,41 @@
 
 .content {
     overflow: hidden;
+
+    .map-view-container {
+        width: 0rem;
+        height: 0rem;
+        margin: 0rem auto;
+
+        .map-view {
+            background-image: url("../assets/map.svg");
+            background-repeat: no-repeat;
+            background-size: 100%;
+            transform: translate(-50%, -50%);
+            transition: width 100ms, height 100ms;
+        }
+    }
+
+    .title-container {
+        position: fixed;
+        top: calc((100vh - 100%) / -2);
+        left: 0;
+        z-index: 1;
+    }
 }
 
-.map-view-container {
-    width: 0rem;
-    height: 0rem;
-    margin: 0rem auto;
-}
-
-.map-view {
-    background-image: url("../assets/map.svg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    transform: translate(-50%, -50%);
-    transition: width 100ms, height 100ms;
+@media only screen and (max-width: 992px) {
+    .title-container {
+        left: calc((100vw - 100%) / -2) !important;
+    }
 }
 
 @media only screen and (max-width: 630px) {
     .map-view {
-        transform: translate(-50%, -70%);
-    }    
+        .title-container {
+            top: calc((100vh - 140%) / -2);
+        }
+        
+        transform: translate(-50%, -70%) !important;
+    }
 }
